<?xml version="1.0"?>
<package format="3">
  <name>c1tenth_drivers</name>
  <version>1.0.0</version>
  <description>CARMA driver wrapper package</description>
  <maintainer email="carma@dot.gov">carma</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>
  <build_depend>rcpputils</build_depend>
  <build_depend>ament_cmake_auto</build_depend>

  <exec_depend>bno055_ros2_driver_wrapper</exec_depend>
  <exec_depend>joy_ros2_driver_wrapper</exec_depend>
  <exec_depend>sllidar_ros2_driver_wrapper</exec_depend>
  <exec_depend>vesc_ros2_driver_wrapper</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

