<?xml version="1.0"?>
<package format="3">
  <name>sllidar_ros2_driver_wrapper</name>
  <version>1.0.0</version>
  <description>CARMA lidar driver wrapper package</description>
  <maintainer email="carma@dot.gov">carma</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>
  <build_depend>rcpputils</build_depend>
  <build_depend>ament_cmake_auto</build_depend>

  <depend>carma_ros2_utils</depend>
  <depend>laser_geometry</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>rclcpp</depend>

  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
